@@ -1,6 +1,7 @@
 Version 1.11.13+dev:
  * Language and i18n:
    * Updated translations:
+   * Fix bug #21967: fix crash when unit modification to traits has empty id
 
 Version 1.11.13:
  * AI:
